# streetview-dl

./: .flake8  .gitignore  CHANGELOG.md  EXAMPLES.md  LICENSE  PLANNING.md  README.md  batch_urls.txt  bulk_collection.txt  fetch_pano.py  generate_examples.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
example_panoramas/: streetview_AySdToSffkdwDHvwF5V0Og.json  streetview_OltaH0q7Feo9u680yLRp7A.json  streetview_Sefqx73MnB9BTyXBaOscfQ.json  streetview_m9Kxq1YiydHXKrVLtggrFA_bw.json
examples_output/: venice_with_metadata.json
exaples/: streetview_GJ99KitLZxEpsY4Yx9PV2g.json
los-angeles-panos/: streetview_49UGjk9BkU-kfYqGR08HJQ.json  streetview_4VpgWwKBgAKHRqd156DQ0w.json
scripts/: publish.sh
streetview_dl/: __init__.py  auth.py  cli.py  core.py  metadata.py  processing.py  utils.py
tests/: test_cli.py  test_metadata.py  test_processing.py
