[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "streetview-dl"
version = "0.2.0"
description = "Download high-resolution Google Street View panoramas from the command line"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "mattstiles@gmail.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Archiving",
    "Topic :: Utilities",
]
keywords = ["streetview", "panorama", "google-maps", "cli", "imagery", "python"]
requires-python = ">=3.8"
dependencies = [
    "click>=8.0.0",
    "requests>=2.25.0",
    "Pillow>=9.0.0",
    "rich>=12.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0",
    "build>=0.8.0",
    "twine>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/streetview-dl"
Repository = "https://github.com/yourusername/streetview-dl"
Documentation = "https://github.com/yourusername/streetview-dl#readme"
Changelog = "https://github.com/yourusername/streetview-dl/blob/main/CHANGELOG.md"
"Bug Tracker" = "https://github.com/yourusername/streetview-dl/issues"

[project.scripts]
streetview-dl = "streetview_dl.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["streetview_dl*"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
